<resources>
    <string name="app_name">Beach Partner&#8482;</string>
    <string name="welcome">WELCOME!</string>
    <string name="loginBtn">LOGIN</string>
    <string name="connect"><u>Connect with:</u></string>
    <string name="dntaccount">Don\'t have an account? </string>
    <string name="signup">Register Here to Sign Up</string>
    <string name="hint_password">Password</string>
    <string name="hint_userName">Email</string>
    <string name="hint_forgot">Forgot Password?</string>
    <string name="registration">REGISTER</string>
    <string name="enter_user_type">You must choose a user type</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_gender">I am</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hintLocation">State</string>
    //note: state populated instead of location
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="already_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="hint_confirmpwd">Confirm Password</string>
    <string name="ChooseVideo">Choose Cover Video</string>
    <string name="no_video">No video available for this profile</string>
    <string name="Invalid">Invalid Username or Password</string>
    <string name="not_activated">Your account is not activated.</string>
    <string name="complete_profile">Please take a moment to complete your profile.</string>


    <!--Tab Icons-->
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_bp"></string>
    <string name="title_calendar">Calendar</string>
    <string name="title_more">More</string>
    <string name="title_connections">Connections</string>

    <!--For Facebook only-->

    <string name="facebook_app_id">182470729033334</string>
    <string name="fb_login_protocol_scheme">fb182470729033334</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming_tournaments">My Upcoming Tournaments</string>
    <string name="next">Next</string>
    <string name="messages">Messages</string>
    <string name="start">GOT IT</string>
    <string name="back">Back</string>
    <string name="partnerintrest">Tournament Requests Received</string>
    <string name="nameerror">Please enter your first name (No special characters allowed)</string>
    <string name="lnameerror">Please enter your last name (NO special characters allowed)</string>
    <string name="doberror">Please enter your date of birth</string>
    <string name="gendererror">Please choose your gender</string>
    <string name="emailerror">Please enter a valid email</string>
    <string name="mobilerror">Please enter a valid mobile number</string>
    <string name="cityerror">Please enter your location</string>
    <string name="invalid_password">Your password is too small. Please enter a minimum of eight characters</string>
    <string name="null_password">Accepts only the valid characters. Please remove space</string>

    <string name="invalid_confirmpassword">Confirm password does not match with the password you entered</string>
    <string name="enter_confirm_pwd">Please confirm your password</string>
    <string name="fname_blank">First name cannot be blank</string>
    <string name="lname_blank">Last name cannot be blank</string>
    <string name="email_blank">Email cannot be blank</string>
    <string name="pwd_blank">Password cannot be blank </string>
    <string name="confpwd_blank">Confirm password cannot be blank or whitespace</string>
    <string name="mobile_blank">Mobile number cannot be blank</string>


    <string name="settings">Settings</string>
    <string name="editProfile">Edit Profile</string>
    <string name="share">Share</string>
    <string name="error_username">Please enter a valid email</string>
    <string name="error_userpassword">Please enter your password</string>

    <!--Top menus-->
    <string name="hint_profile">My Profile</string>
    <string name="hint_aboutus">About Us</string>
    <string name="hint_feedback">Feedback</string>
    <string name="hint_settings">Settings</string>
    <string name="hint_help">Help</string>
    <string name="hint_title">Logout</string>


    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="iagree">I Agree</string>
    <string name="hint_continue">Continue</string>
    <string name="conditions">These Website Standard Terms and Conditions written on this webpage shall manage your use of this website. These Terms will be applied fully and affect to your use of this Website. By using this Website, you agreed to accept all terms and conditions written in here. You must not use this Website if you disagree with any of these Website Standard Terms and Conditions</string>
    <string name="hint_age">Select the age limit you are looking for</string>
    <string name="hint_location">Select the location in which you want to find a player</string>


    <string name="hint_basicinfo">Basic Information</string>
    <string name="hint_moreinfo">More Information</string>

    <!--More Information-->

    <string name="hint_experience">Experience Level</string>
    <string name="hint_pref">Court Side Preference</string>
    <string name="hint_position">Position</string>
    <string name="hint_height">Height</string>
    <string name="hint_intrest">Tournament Level Interest</string>
    <string name="hint_tourplayed">Tours Played</string>
    <string name="hint_highest">Highest Tour Rating Earned</string>
    <string name="hint_CBVANo">CBVA Player Number</string>
    <string name="hint_CBVAFName">CBVA First Name</string>
    <string name="hint_CBVALName">CBVA Last Name</string>
    <string name="hint_WtoTravel">Willingness To Travel</string>
    <string name="hint_highschool">High School attended</string>
    <string name="hint_indoorclub">Indoor Club played at</string>
    <string name="hint_collgeclub">College (Club)</string>
    <string name="hint_collgebeach">College (Beach)</string>
    <string name="hint_colgindoor">College (Indoor)</string>
    <string name="hint_points">Points</string>
    <string name="hint_youlink">YouTube Link</string>
    <string name="hint_biolink">Bio Link</string>
    <string name="hint_rank">Ranking</string>

    <!--More info coach-->
    <string name="hint_coach_college">College/University</string>
    <string name="description">Description</string>
    <string name="years_running">Years Running</string>
    <string name="no_of_athletes">Number of Athletes</string>
    <string name="prog_offered">Programs Offered</string>
    <string name="Division">Division</string>
    <string name="funding">Is your Program fully funded?</string>
    <string name="athletes_bw_indoor_beach">Does your program share athletes between Indoor and Beach?</string>


    <!--password reset-->
    <string name="hint_password_reset">Password Reset</string>
    <string name="hint_key">Key</string>
    <string name="hint_newpassword">New Password</string>
    <string name="hint_confirm_pwd">Confirm Password</string>
    <string name="hint_ok">OK</string>
    <string name="hint_cancel">CANCEL</string>
    <string name="invalid_key">The key you entered is not valid</string>
    <string name="hint_passord_size">Please enter password</string>
    <string name="hint_didnotmatch">Password does not match</string>
    <string name="premium">(PREMIUM)</string>


    <string name="hint_court_assign_msg">Notifications will be sent to your team partners. Coaches in your connection list and parents (if linked to your profile) will also be notified.</string>
    <string name="reg_success_msg">To complete registration, please check your email and click on the activation link. </string>
    <string name="reg_success_return">Return to login</string>
    <string name="reg_success_never">I never got the email</string>
    <string name="never_got_the_email_msg">"Please check your spam folder. If you haven't received any email even after 10 minutes, please contact kara@beachpartner.com"</string>
    <string name="title_activity_application">ApplicationActivity</string>

    <!--subscription texts here-->

    <string name="reg">Registration fee</string>
    <string name="swipes">Swipes</string>
    <string name="swipe_visiblity">Swipe visiblity</string>
    <string name="high_five">High-fives</string>
    <string name="connection">Connections</string>
    <string name="chat">Chat</string>
    <string name="master">Master calendar</string>
    <string name="mycal">My calendar</string>
    <string name="myupcoming">My upcoming tournaments</string>
    <string name="event_invite">Event invitation</string>
    <string name="event_search">Event search</string>
    <string name="court">Court notification</string>
    <string name="partner">Partner  requests</string>
    <string name="bluebpboost">Blue BP profile boost</string>
    <string name="bluebp_sub">(feature atleast once/month)</string>
    <string name="likeplayer">Visiblity to players who "like" you</string>
    <string name="likecoach">Visiblity to coaches who "like" you</string>
    <string name="location_change">Passport search location change</string>
    <string name="undolast">Undo last swipe option</string>
    <string name="buy_now">BUY NOW</string>
    <string name="standard_sub">STANDARD</string>
    <string name="lite_sub">LITE</string>
    <string name="recruiting_sub">RECRUITING</string>
    <string name="free_sub">FREE</string>
    <string name="read_more">Read more</string>

    <string name="sub_header">GET BEACH PARTNER PREMIUM</string>
    <string name="sub_desc">This is a premium feature. Please subscribe to \n one of the below subscription types to be \n able to use this feature.</string>

    <string name="version">Beach Partner v44</string>
    <string name="no_tournament_requests_sent">No  Tournament requests sent</string>
    <string name="no_tournament_requests_received">No Tournament requests received</string>
    <string name="no_upcoming_tournaments">You have no Upcoming Tournaments</string>
    <string name="no_new_messages">You have no new Messages</string>
    <string name="team_size">Team Size</string>
    <string name="no_messsages_message_fragment">Messages sent or received will appear here</string>
    <string name="clear_all">Clear All</string>

    <string name="update_available">Update Available</string>
    <string name="msg_update">Current version of the application (%s) is obsolete. Please update application to avail services</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="install_play_store">Please install play services to update the app</string>

    <string name="no_events_found">No Events Found</string>
    <string name="hint_logout">Would you like to log out?</string>
    <string name="message_logout">Logout</string>
    <string name="no_internet">No internet connection</string>
    <string name="swipe_accept_or_reject_invitations">Swipe below items right or left to accept or reject invitations respectively</string>
    <string name="channel_name">default_channel</string>
    <string name="channel_description">Notification</string>
    <string name="channel_id">default_channel_id</string>
    <string name="current_plan">Current plan</string>
</resources>