<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_bp"
        android:icon="@drawable/ic_bp"
        android:title="@string/title_bp" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_more" />

</menu>
