<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgimage"
    tools:context="com.goldemo.beachpartner.activity.TermsConditionsActivity">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:background="@drawable/logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/bg_box"
        android:orientation="vertical"
        android:weightSum="3">

        <com.goldemo.beachpartner.CustomTextView
            android:id="@+id/tc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight="0.5"
            android:textColor="@color/colorText"
            android:text="@string/terms_conditions"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.goldemo.beachpartner.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/conditions"/>


            </ScrollView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/iagree"
                android:gravity="center_vertical"/>


        </LinearLayout>



        <com.goldemo.beachpartner.CustomButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_margin="15dp"
            android:background="@color/btnColor"
            android:text="@string/hint_continue"
            android:textColor="@color/white"/>


    </LinearLayout>

</LinearLayout>
