<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bgimage"
    android:weightSum="2">


    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:background="@drawable/logo" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1.7"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_box">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            android:weightSum="11">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:weightSum="2"
                    android:orientation="vertical">

                    <!--First Name-->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                        android:weightSum="1">

                        <com.goldemo.beachpartner.MyEditText
                            android:id="@+id/input_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/hint_fname"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <!--Last Name-->

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                        android:weightSum="1">

                        <com.goldemo.beachpartner.MyEditText
                            android:id="@+id/input_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/hint_lname"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>
                
                
                
                


            <!--Date of Birth-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:weightSum="1">

                <com.goldemo.beachpartner.MyEditText
                    android:id="@+id/input_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/hint_dob"
                    android:focusable="false"/>
            </android.support.design.widget.TextInputLayout>

                <!--Gender-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:padding="5dp"
                android:orientation="horizontal">

                <com.goldemo.beachpartner.MyButton
                    android:id="@+id/btnMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/imgBacgnd"
                    android:text="@string/hint_male"/>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <com.goldemo.beachpartner.MyButton
                    android:id="@+id/btnFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/imgBacgnd"
                    android:layout_weight="1"
                    android:text="@string/hint_female"/>

            </LinearLayout>

            <!--Contact Email-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:weightSum="1">

                <com.goldemo.beachpartner.MyEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <!--Password-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:weightSum="1">

                <com.goldemo.beachpartner.MyEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!-- Confirm Password-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:weightSum="1">

                <com.goldemo.beachpartner.MyEditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/hint_confirmpwd"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>



            <!--City-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:weightSum="1">

                <com.goldemo.beachpartner.MyEditText
                    android:id="@+id/input_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/hint_city"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <!--Phone Number-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"

                android:weightSum="1">

                <com.goldemo.beachpartner.MyEditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/hint_mobile"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:layout_weight="0.3"
        android:weightSum="2">

        <com.goldemo.beachpartner.MyButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:text="@string/registration"
            android:textColor="@color/white" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp">


            <com.goldemo.beachpartner.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textAlignment="textEnd"
                android:text="@string/already_account"
                android:textColor="@color/colorText"
                android:layout_gravity="end" />
            <Space
                android:layout_weight="0.01"
                android:layout_width="0dp"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent">

                <com.goldemo.beachpartner.MyTextView
                    android:id="@+id/tSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/colorText" />

            </LinearLayout>







        </LinearLayout>


    </LinearLayout>



</LinearLayout>