<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5.2"
        android:layout_margin="10dp"
        android:background="@drawable/button_box">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.goldemo.beachpartner.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/text_size"
                android:text="@string/hint_password_reset"/>

        </LinearLayout>

        <!--Key field-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.goldemo.beachpartner.CustomTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/hint_key"/>


            <com.goldemo.beachpartner.CustomEditText
                android:id="@+id/edittxt_key"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"/>

        </LinearLayout>

        <!--new PAssword feild-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:weightSum="2">

            <com.goldemo.beachpartner.CustomTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/hint_newpassword"/>


            <com.goldemo.beachpartner.CustomEditText
                android:id="@+id/edittxt_newPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:layout_weight="1.2"/>

        </LinearLayout>

       <!-- confirm password feild-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:weightSum="2">

            <com.goldemo.beachpartner.CustomTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/hint_confirm_pwd"/>


            <com.goldemo.beachpartner.CustomEditText
                android:id="@+id/edittxt_confirmPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:layout_weight="1.2"/>

        </LinearLayout>

        <!--action buttons-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal"
            android:weightSum="3">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"/>

            <com.goldemo.beachpartner.CustomButton
                android:id="@+id/btn_resetCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/btnColor"
                android:textColor="@color/white"
                android:text="@string/hint_cancel"
                android:layout_weight="1"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>

            <com.goldemo.beachpartner.CustomButton
                android:id="@+id/btn_resetOk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/btnColor"
                android:textColor="@color/white"
                android:text="@string/hint_ok"
                android:layout_weight="1"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>